--- a/app/src/main/res/layout/nav_view_header.xml
+++ b/app/src/main/res/layout/nav_view_header.xml
@@ -5,8 +5,7 @@
               android:layout_height="wrap_content"
               android:padding="16dp"
               android:orientation="vertical"
-              android:gravity="bottom"
-              android:background="@color/colorPrimary">
+              android:gravity="bottom">
 
     <TextView
             android:layout_width="match_parent"
