--- a/app/src/main/res/layout/fragment_core_detail.xml
+++ b/app/src/main/res/layout/fragment_core_detail.xml
@@ -14,6 +14,7 @@
         <ImageView
                 android:id="@+id/image_core"
                 android:src="@drawable/detail_fragment_image_zuma"
+                android:contentDescription="@string/detail_fragment_image_content_desc"
                 android:layout_width="0dp"
                 android:layout_height="150dp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -23,7 +24,7 @@
 
         <TextView
                 android:id="@+id/textView13"
-                android:text="Core serial"
+                android:text="@string/core_serial"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
@@ -35,7 +36,7 @@
                 android:id="@+id/text_core_serial"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="..."
+                android:text="@string/empty_content_sign"
                 tools:text="Merlin1A"
                 android:layout_marginStart="8dp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -46,7 +47,7 @@
 
         <TextView
                 android:id="@+id/textView10"
-                android:text="Block"
+                android:text="@string/block"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toBottomOf="@+id/text_core_serial"
@@ -55,7 +56,7 @@
 
         <TextView
                 android:id="@+id/text_core_block"
-                android:text="..."
+                android:text="@string/empty_content_sign"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 tools:text="1"
@@ -66,7 +67,7 @@
 
         <TextView
                 android:id="@+id/textView11"
-                android:text="Status"
+                android:text="@string/status"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toTopOf="@+id/textView10"
@@ -76,7 +77,7 @@
 
         <TextView
                 android:id="@+id/text_core_status"
-                android:text="..."
+                android:text="@string/empty_content_sign"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
@@ -89,7 +90,7 @@
 
         <TextView
                 android:id="@+id/textView14"
-                android:text="Original launch (UTC time)"
+                android:text="@string/original_launch"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
@@ -108,7 +109,7 @@
 
         <TextView
                 android:id="@+id/textView12"
-                android:text="Details"
+                android:text="@string/details"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
@@ -118,7 +119,7 @@
 
         <TextView
                 android:id="@+id/text_core_details"
-                android:text="..."
+                android:text="@string/empty_content_sign"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:textAlignment="center"
@@ -132,7 +133,7 @@
 
         <TextView
                 android:id="@+id/textView"
-                android:text="RTLS attempts"
+                android:text="@string/rtls_attempts"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
@@ -147,12 +148,12 @@
                 android:layout_height="wrap_content"
                 app:layout_constraintStart_toEndOf="@+id/textView" app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:text="0"
+                android:text="@string/empty_content_sign"
                 app:layout_constraintTop_toTopOf="@+id/textView"/>
 
         <TextView
                 android:id="@+id/textView4"
-                android:text="RTLS landings"
+                android:text="@string/rtls_landings"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintStart_toStartOf="@+id/textView"
@@ -164,11 +165,11 @@
                 android:layout_height="wrap_content"
                 app:layout_constraintEnd_toEndOf="@+id/text_core_rtls_attempts"
                 tools:text="0" app:layout_constraintTop_toTopOf="@+id/textView4"
-                android:text="0"/>
+                android:text="@string/empty_content_sign"/>
 
         <TextView
                 android:id="@+id/textView7"
-                android:text="ASDS attempts"
+                android:text="@string/asds_attempts"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
@@ -180,11 +181,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintEnd_toEndOf="@+id/text_core_rtls_landings"
-                app:layout_constraintTop_toTopOf="@+id/textView7" tools:text="0" android:text="0"/>
+                app:layout_constraintTop_toTopOf="@+id/textView7" tools:text="0"
+                android:text="@string/empty_content_sign"/>
 
         <TextView
                 android:id="@+id/textView3"
-                android:text="ASDS landings"
+                android:text="@string/asds_landings"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
@@ -193,7 +195,7 @@
 
         <TextView
                 android:id="@+id/text_core_asds_landings"
-                android:text="0"
+                android:text="@string/empty_content_sign"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toTopOf="@+id/textView3"
@@ -202,7 +204,7 @@
 
         <TextView
                 android:id="@+id/textView9"
-                android:text="Water landing"
+                android:text="@string/water_landing"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintStart_toStartOf="@+id/textView3"
@@ -211,7 +213,7 @@
 
         <TextView
                 android:id="@+id/text_core_water_landing"
-                android:text="0"
+                android:text="@string/empty_content_sign"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toTopOf="@+id/textView9"
@@ -219,7 +221,7 @@
 
         <TextView
                 android:id="@+id/textView5"
-                android:text="Reused"
+                android:text="@string/reused"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
@@ -228,7 +230,7 @@
                 android:layout_marginBottom="8dp"/>
         <TextView
                 android:id="@+id/text_core_reused"
-                android:text="0"
+                android:text="@string/empty_content_sign"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 tools:text="0"
