--- a/app/src/main/res/menu/menu_action_bar.xml
+++ b/app/src/main/res/menu/menu_action_bar.xml
@@ -3,12 +3,12 @@
 
     <item
             android:id="@+id/action_refresh"
-            android:title="Refresh"
+            android:title="@string/refresh"
             app:showAsAction="never"/>
 
     <item
             android:id="@+id/action_delete"
-            android:title="Delete"
+            android:title="@string/delete"
             app:showAsAction="never"/>
 
 </menu>
