Dynamically add payloads, initial code, no style applied

--- a/app/src/main/res/layout/fragment_upcoming_launches_detail.xml
+++ b/app/src/main/res/layout/fragment_upcoming_launches_detail.xml
@@ -122,6 +122,23 @@
                 app:layout_constraintHorizontal_bias="0.481"
                 app:layout_constraintTop_toBottomOf="@+id/textView15" android:layout_marginTop="8dp">
         </FrameLayout>
+        <TextView
+                android:text="Second stage payloads"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView17"
+                app:layout_constraintTop_toBottomOf="@+id/frame_cores_list" android:layout_marginTop="16dp"
+                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
+        <FrameLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/textView17" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
+                app:layout_constraintEnd_toEndOf="parent" android:id="@+id/frame_payloads">
+
+        </FrameLayout>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
