--- a/app/src/main/res/layout/fragment_upcoming_launches_detail.xml
+++ b/app/src/main/res/layout/fragment_upcoming_launches_detail.xml
@@ -51,12 +51,13 @@
                 android:layout_height="wrap_content"
                 android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                 android:textAlignment="center"
-                app:layout_constraintTop_toBottomOf="@+id/textView16"
                 android:layout_marginTop="8dp"
-                tools:text='"Nusantara Satu (PSN-6) / GTO-1 / Beresheet"'
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/textView16"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"/>
+                app:layout_constraintStart_toStartOf="parent"
+                tools:text='"Nusantara Satu (PSN-6) / GTO-1 / Beresheet"'/>
 
         <TextView
                 android:id="@+id/textView19"
@@ -100,46 +101,88 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginEnd="8dp"
                 app:layout_constraintTop_toBottomOf="@+id/textView22"
-                tools:text="CCAFS SLC 40" />
+                tools:text="CCAFS SLC 40"/>
 
-        <TextView
-                android:text="First stage cores"
+        <androidx.cardview.widget.CardView
+                android:id="@+id/card_cores_list"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/textView15"
                 app:layout_constraintTop_toBottomOf="@+id/text_launch_site_name"
-                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-                android:layout_marginTop="16dp"/>
-        <FrameLayout
-                android:id="@+id/frame_cores_list"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
-                android:layout_marginStart="8dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.481"
-                app:layout_constraintTop_toBottomOf="@+id/textView15" android:layout_marginTop="8dp">
-        </FrameLayout>
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginTop="16dp"
+                android:foreground="?android:attr/selectableItemBackground"
+                android:clickable="true"
+                app:cardCornerRadius="8dp">
+
+            <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:minWidth="240dp"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:paddingTop="8dp"
+                        android:paddingBottom="8dp">
+
+                    <TextView
+                            android:id="@+id/textView15"
+                            android:text="First stage cores"
+                            android:textStyle="bold"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="8"
+                            android:layout_marginStart="16dp"
+                            android:layout_marginEnd="8dp"/>
+
+                    <ImageView
+                            android:id="@+id/image_cores_expand_arrow"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/ic_expand_more_black_24dp"
+                            android:layout_weight="2"
+                            android:layout_marginStart="8dp"/>
+                </LinearLayout>
+                <FrameLayout
+                        android:id="@+id/frame_cores_list"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingEnd="8dp"
+                        android:paddingStart="8dp"
+                        android:paddingBottom="8dp"
+                        android:visibility="gone">
+                </FrameLayout>
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+
         <TextView
                 android:text="Second stage payloads"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/textView17"
-                app:layout_constraintTop_toBottomOf="@+id/frame_cores_list" android:layout_marginTop="16dp"
-                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
+                android:layout_marginTop="16dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/card_cores_list"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
         <FrameLayout
+                android:id="@+id/frame_payloads"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/textView17" app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
-                app:layout_constraintEnd_toEndOf="parent" android:id="@+id/frame_payloads">
+                android:layout_marginEnd="8dp"
+                android:layout_marginStart="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/textView17"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent">
 
         </FrameLayout>
-
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
