--- a/app/src/main/res/layout/fragment_upcoming_launches_detail.xml
+++ b/app/src/main/res/layout/fragment_upcoming_launches_detail.xml
@@ -132,7 +132,7 @@
 
                     <TextView
                             android:id="@+id/textView15"
-                            android:text="First stage cores"
+                            android:text="@string/first_stage_cores"
                             android:textStyle="bold"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -146,8 +146,10 @@
                             android:layout_height="wrap_content"
                             android:src="@drawable/ic_expand_more_black_24dp"
                             android:layout_weight="2"
-                            android:layout_marginStart="8dp"/>
+                            android:layout_marginStart="8dp"
+                            android:contentDescription="@string/expand_collapse_arrow_image"/>
                 </LinearLayout>
+
                 <FrameLayout
                         android:id="@+id/frame_cores_list"
                         android:layout_width="wrap_content"
@@ -160,29 +162,64 @@
             </LinearLayout>
         </androidx.cardview.widget.CardView>
 
-        <TextView
-                android:text="Second stage payloads"
+        <androidx.cardview.widget.CardView
+                android:id="@+id/card_payloads"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/textView17"
-                android:layout_marginTop="16dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"
                 app:layout_constraintTop_toBottomOf="@+id/card_cores_list"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"/>
-        <FrameLayout
-                android:id="@+id/frame_payloads"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
+                app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginStart="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/textView17"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent">
+                android:layout_marginEnd="8dp"
+                android:layout_marginTop="16dp"
+                android:foreground="?android:attr/selectableItemBackground"
+                android:clickable="true"
+                app:cardCornerRadius="8dp">
 
-        </FrameLayout>
+            <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:minWidth="240dp"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:paddingTop="8dp"
+                        android:paddingBottom="8dp">
+
+                    <TextView
+                            android:id="@+id/textView17"
+                            android:text="@string/second_stage_payloads"
+                            android:textStyle="bold"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="8"
+                            android:layout_marginStart="16dp"
+                            android:layout_marginEnd="8dp"/>
+                    <ImageView
+                            android:id="@+id/image_payloads_expand_arrow"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/ic_expand_more_black_24dp"
+                            android:layout_weight="2"
+                            android:layout_marginStart="8dp"
+                            android:contentDescription="@string/expand_collapse_arrow_image"/>
+
+                </LinearLayout>
+
+                <FrameLayout
+                        android:id="@+id/frame_payloads"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingEnd="8dp"
+                        android:paddingStart="8dp"
+                        android:paddingBottom="8dp"
+                        android:visibility="gone">
+                </FrameLayout>
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
