--- a/app/src/main/res/layout/bottom_sheet_attribution.xml
+++ b/app/src/main/res/layout/bottom_sheet_attribution.xml
@@ -13,6 +13,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
+            android:gravity="center"
             android:text="@string/lottie_attribution_dongdona"
             android:textAlignment="center"/>
 
