--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -64,7 +64,6 @@
         <HorizontalScrollView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
                 app:layout_constraintTop_toBottomOf="@+id/textView6"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginStart="8dp"
@@ -91,6 +90,12 @@
                         android:layout_height="wrap_content"
                         android:text="@string/twitter"/>
 
+                <com.google.android.material.chip.Chip
+                        android:id="@+id/chip_website_omisie11"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/website"/>
+
             </com.google.android.material.chip.ChipGroup>
         </HorizontalScrollView>
 
@@ -111,16 +116,35 @@
                 app:layout_constraintEnd_toEndOf="parent"/>
 
         <TextView
+                android:text="@string/get_the_app_source_code_on_github"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView20" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/textView23" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="8dp"/>
+
+        <com.google.android.material.chip.Chip
+                android:id="@+id/chip_source_code"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/source_code"
+                app:layout_constraintTop_toBottomOf="@+id/textView20"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="8dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="8dp"/>
+
+        <TextView
                 android:id="@+id/textView18"
                 android:text="@string/credits"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"
-                android:layout_marginTop="16dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView23"/>
+                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/chip_source_code"/>
 
         <androidx.cardview.widget.CardView
                 android:id="@+id/card_attribution_space_api"
