--- a/app/src/main/res/layout/used_libraries_recycler_item.xml
+++ b/app/src/main/res/layout/used_libraries_recycler_item.xml
@@ -1,36 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/text_lib_license"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        tools:text="Apache-2.0"/>
+        android:layout_marginEnd="16dp"
+        tools:text="Apache-2.0" />
 
     <TextView
         android:id="@+id/text_lib_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
-        tools:text="Material Components"/>
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
+        tools:text="Material Components" />
 
     <TextView
         android:id="@+id/text_lib_desc"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:maxLines="2"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="8dp"
         android:ellipsize="end"
-        tools:text="Modular and customizable Material Design UI components for Android"/>
+        android:maxLines="2"
+        tools:text="Modular and customizable Material Design UI components for Android" />
 
 </LinearLayout>
